<resources>
    <string name="app_name">Social Network</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="loginCreateAccount">Não tem uma conta? Clique aqui!</string>
    <string name="register">Cadastrar</string>
    <string name="name">Nome</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="main_fragment_tag">mainFragmentContainer</string>
    <string name="logout">Sair</string>
    <string name="commentExample">Nossa! Amei a sua foto.</string>
    <string name="commentReply">Responder</string>
    <string name="commentProfileNameExample">Spider-man</string>
    <string name="gallery_recent">Recentes</string>
    <string name="post_description">Escreva algo sobre sua foto…</string>
    <string name="publish">Publicar</string>
</resources>