<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/commentProfilePicture"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@mipmap/ic_spider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/commentProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/commentProfileNameExample"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/commentProfilePicture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/commentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/commentExample"
        app:layout_constraintStart_toEndOf="@id/commentProfilePicture"
        app:layout_constraintTop_toBottomOf="@id/commentProfileName" />

    <TextView
        android:id="@+id/commentReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/commentReply"
        android:textColor="@color/medium_gray"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/commentProfilePicture"
        app:layout_constraintTop_toBottomOf="@id/commentText" />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/commentReplySection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/commentProfilePicture"
        app:layout_constraintTop_toBottomOf="@id/commentText"
        tools:itemCount="1" />

</androidx.constraintlayout.widget.ConstraintLayout>