<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".login.view.LoginActivity">

    <TextView
        android:id="@+id/loginTextLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="Social Network"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/loginScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/loginTextCreateAccount"
        app:layout_constraintTop_toBottomOf="@id/loginTextLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginEmailTextInputLayout"
                style="@style/CustomInputOutlined"
                android:hint="@string/email"
                app:endIconMode="clear_text"
                app:endIconTint="@color/light_gray"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/light_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEmailTextInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:textColor="@color/light_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPasswordTextInputLayout"
                style="@style/CustomInputOutlined"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/light_gray"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/light_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPasswordTextInputEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/light_gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginBtnLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/login" />

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/loginTextCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/loginCreateAccount"
        android:textColor="@color/light_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

